Include/GTILib.h

enum GTI_DEVICE_STATUS {
	GTI_DEVICE_STATUS_ERROR,
	GTI_DEVICE_STATUS_ADDED,
	GTI_DEVICE_STATUS_REMOVED,
	GTI_DEVICE_STATUS_IDLE,
	GTI_DEVICE_STATUS_LOCKED,
	GTI_DEVICE_STATUS_RUNNING,
	GTI_DEVICE_STATUS_PENDING,
	GTI_DEVICE_STATUS_UNKNOWN,
	GTI_DEVICE_STATUS_BUT
};
enum GTI_DEVICE_TYPE {
	GTI_DEVICE_TYPE_ALL,
	GTI_DEVICE_USB_FTDI,
	GTI_DEVICE_USB_EUSB,
	GTI_DEVICE_PCIE,
	GTI_DEVICE_VIRTUAL,
	GTI_DEVICE_USB_NATIVE,
	GTI_DEVICE_TYPE_UNKNOWN,
	GTI_DEVICE_TYPE_BUT
};
enum GTI_CHIP_MODE{
	FC_MODE,
	LEARN_MODE,
	SINGLE_MODE,
	SUBLAST_MODE,
	LASTMAJOR_MODE,
	LAST7x7OUT_MODE,
	SUM7x7OUT_MODE,
	GTI_CHIP_MODE_BUT
};
enum TENSOR_FORMAT{
	TENSOR_FORMAT_BINARY,  //default is char
	TENSOR_FORMAT_BINARY_INTEGER,
	TENSOR_FORMAT_BINARY_FLOAT,
	TENSOR_FORMAT_TEXT,
	TENSOR_FORMAT_JSON,
	TENSOR_FORMAT_UNDEFINED,
	TENSOR_FORMAT_BUT,
};
class GtiDevice;
class GtiContext;
class GtiModel;
	/*!
		\fn GTISDK_API GtiModel *GtiCreateModel(const char *modelFile);
		\brief Create a GTI Model object from a Model File
		\param[in] modelFile -- A constant char string containing the name of the model file
		\return -- A pointer to the created GtiModel object; null in case of errors
	*/
	GTISDK_API GtiModel *GtiCreateModel(const char *modelFile);
	/*!
		\fn GTISDK_API GtiModel *GtiCreateModelFromBuffer(void *modelBuffer, int size);
		\brief Create a GTI Model object given a buffer that contains the entire model
		\param[in] modelBuffer -- A pointer to a buffer containing a model as a byte array
		\param[in] modelSize -- An integer containing the model's size in bytes
		\return -- A pointer to the created GtiModel object; null in case of errors
	*/
	GTISDK_API GtiModel *GtiCreateModelFromBuffer(void *modelBuffer, int size);
	/*!
		\fn GTISDK_API int GtiDestroyModel(GtiModel *model);
		\brief Destory a GTI Model object
		\param[in] model -- A pointer to a GtiModel object
		\return -- Always 1
	*/
	GTISDK_API int GtiDestroyModel(GtiModel *model);
	/*!
		\fn GTISDK_API GtiTensor * GtiEvaluate(GtiModel *model,GtiTensor * input);
		\brief Evaluate an input GtiTensor object
		This function sends input data as a GtiTensor object to the established model.  The model
		filters the data through all layers in the network, and output the results as a GtiTensor
		object.
		\param[in] model -- A pointer to the model object
		\param[in] input -- A pointer to the input GtiTensor object
		\return -- A pointer to the output GtiTensor object
	*/
	GTISDK_API GtiTensor * GtiEvaluate(GtiModel *model,GtiTensor * input);
	/*!
		\fn GTISDK_API const char * GtiImageEvaluate(GtiModel *model, const char *image, int height, int width, int depth);
		\brief Evaluate an input image object presented as an array of bytes
		This function sends input data as an image arranged in an array of bytes to the established model.  The model
		filters the data through all layers in the network, and output the results as an array of bytes.
		\param[in] model -- a pointer to a model object
		\param[in] image -- a char string, the input image file
		\param[in] height -- height of image in number of pixels
		\param[in] width -- width of image in number of pixels
		\param[in] depth -- depth of image in number of channels per pixel
		\return -- a pointer to the output data as an array of bytes
	*/
	GTISDK_API const char * GtiImageEvaluate(GtiModel *model,const char * image,int height, int width, int depth);
	/*!
		\fn GTISDK_API void GtiDecomposeModelFile(const char *modelFile);
		\brief Decompose a model file into per layer model defintion files
		A model file represents a complete network that consists of multiple layers.
		This function breaks the model file into multiple individual files
		each contains definition of a layer. A separate json file that 
		contains the decomposed structure of the network is also generated.
		\param[in] modelFile -- A constant char string containing the name of a model file
		\return -- Void
	*/
	GTISDK_API void GtiDecomposeModelFile(const char *modelFile);
	/*!
		\fn GTISDK_API void GtiComposeModelFile(const char *jsonFile, const char *modelFile);
		\brief Compose individual layers into a model file.
		Given a network structure definition defined with a json file, this function assembles individual
		layer definitions into a complete model file.  Each layer is stored in a file with its filename 
		recorded in the json file.  The output is a new model file that consists of all layers.
		\param[in] jsonFile -- A constant char string for the name of the json file that contains the network structure
		\param[in] modelFile -- A constant char string containing the name of a model file
		\return -- Void
	*/
	GTISDK_API void GtiComposeModelFile(const char *jsonFile, const char *modelFile);
	/*!
		\fn GTISDK_API const char * GtiGetSDKVersion();
		\brief This function returns GTISDK version as a string
		\return -- GTISDK version
	*/	
	GTISDK_API const char * GtiGetSDKVersion();
	/*!
		\fn GTISDK_API GtiContext *GtiGetContext();
		\brief This function returns a point to the current GtiContext object
		\return -- GTI Context object
	*/	
	GTISDK_API GtiContext *GtiGetContext();
	/*!
		\fn GTISDK_API GtiDevice *GtiGetDevice(GtiContext * context, const char *devicePlatformName);
		\brief Get an availble GtiDevice object that have required platform name
		\param[in] context -- The GtiContext object that contains the GtiDevice
		\param[in] devicePlatformName -- A string represeting the platform's name of a device
		\return -- A pointer to the available GtiDevice object
	*/
	GTISDK_API GtiDevice *GtiGetDevice(GtiContext * context, const char *devicePlatformName);
	/*!
		\fn GTISDK_API GtiDevice *GtiGetAvailableDevice(GtiContext * context, GTI_DEVICE_TYPE deviceType);
		\brief Get an avilable GtiDevice object from the list of unused devices that satisfies the required type.
		\param[in] context -- The GtiContext object that has the GtiDevice
		\param[in] deviceType -- Enumerated device type
		\return -- A pointer to the available GtiDevice object
	*/
	GTISDK_API GtiDevice *GtiGetAvailableDevice(GtiContext * context, GTI_DEVICE_TYPE deviceType);
	/*!
		\fn GTISDK_API GtiDevice *GtiDeviceCreate(int DeviceType, char *FilterFileName, char *ConfigFileName);
		\brief Create a device object that represents a hardware device chip
		This function sets up which port is used to connect to a device, chooses which Gnet type 
		and CNN mode to be used, it also allocates memory for internal use.  
		The created device is of mode "FC_MODE" if mode is not defined by environment variable "GTI_CHIP_MODE"
		Filter file is GTI defined .dat coefficient file, for example: gnet32_fc128_20class.bin. 
		Config file is GTI defined ASCII file for storing configuration information, for example: userinput.txt.
		These files can be found under the data folder.
		\param[in] DeviceType -- 0=FTDI; 1=EUSB;  2=PCIe
		\param[in] FilterFileName -- GTI defined .dat coef file to config network 
		\param[in] ConfigFileName -- GTI defined ASCII file to config GTISDK usage
		\return -- A point to the created GtiDevice object
		
		\obsolete -- This function is obsolete. Support will be removed
	*/
	GTISDK_API GtiDevice *GtiDeviceCreate(int DeviceType, char *FilterFileName, char *ConfigFileName);
	/*!
		\fn GTISDK_API int GtiOpenDevice(GtiDevice *Device, char *DeviceName);
		\brief Open the device for parameter setting and data transferring
		\param[in] Device -- A pointer to the device object created by GtiDeviceCreate
		\param[in] DeviceName -- The name of the hardware device's device handle, e.g. /dev/sg2
		\return -- Always 1

		\obsolete This function is obsolete. Support will be removed
	*/
	GTISDK_API int GtiOpenDevice(GtiDevice *Device, char *DeviceName);